--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,13 +12,14 @@ workflow:
 
 test:
   stage: test
-  image: golang:1.17
+  image: golang:1.18
   script:
     - go test -v -coverpkg ./... ./...
+  coverage: '/coverage: [0-9.]+%/'
 
 build:
   stage: build
-  image: golang:1.17
+  image: golang:1.18
   script:
     - GOARCH=amd64 GOOS=linux   go build -ldflags="-s -w" -o "propencrypt"     "cmd/propencrypt.go"
     - GOARCH=amd64 GOOS=windows go build -ldflags="-s -w" -o "propencrypt.exe" "cmd/propencrypt.go"
