--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,13 +6,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-          cache: true
+        uses: actions/setup-go@v5
+        with: { go-version: 1.22 }
 
       - name: Test
         run: go test -v -coverpkg ./... ./... | tee test.out
@@ -46,7 +44,7 @@ jobs:
           Set-Content -Path "$archive.sha256" -Value "$hash`n" -Encoding 'ascii' -NoNewline
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: propencrypt
           path: propencrypt*
@@ -55,14 +53,14 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with: { node-version: 18 }
+        uses: actions/setup-node@v4
+        with: { node-version: 20 }
 
       - name: Download artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with: { name: propencrypt }
 
       - name: Package
@@ -72,7 +70,7 @@ jobs:
         run: bash ./build/package/npm/scripts/test.sh
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: propencrypt-npm-package
           path: build/package/npm/*.tgz
